make naming consistent

--- a/packages/expressions/tests/index.html
+++ b/packages/expressions/tests/index.html
@@ -16,14 +16,14 @@ limitations under the License.
 -->
 <html>
 <head>
-<title>PolymerExpressions tests</title>
+<title>polymer-expressions tests</title>
 <meta charset="utf-8">
 <link rel="stylesheet" href="../node_modules/mocha/mocha.css">
 <script src="../node_modules/chai/chai.js"></script>
 <script src="../node_modules/mocha/mocha.js"></script>
-<script src="../../ObserveJS/src/observe.js"></script>
-<script src="../../Node-bind/src/node-bind.js"></script>
-<script src="../../Template-instantiation/src/template-instantiation.js"></script>
+<script src="../../observe-js/src/observe.js"></script>
+<script src="../../NodeBind/src/NodeBind.js"></script>
+<script src="../../TemplateInstances/src/TemplateInstances.js"></script>
 <script src="../third_party/esprima/esprima.js"></script>
 <script src="../src/polymer-expressions.js"></script>
 </head>
@@ -38,7 +38,7 @@ mocha.setup({
 var assert = chai.assert;
 
 </script>
-<script src="polymer-expressions-tests.js"></script>
+<script src="tests.js"></script>
 <div id="mocha"></div>
 <script>
 mocha.run();
