fix reference to TemplateBinding

--- a/packages/expressions/tests/index.html
+++ b/packages/expressions/tests/index.html
@@ -21,9 +21,7 @@ limitations under the License.
 <link rel="stylesheet" href="../node_modules/mocha/mocha.css">
 <script src="../node_modules/chai/chai.js"></script>
 <script src="../node_modules/mocha/mocha.js"></script>
-<script src="../../observe-js/src/observe.js"></script>
-<script src="../../NodeBind/src/NodeBind.js"></script>
-<script src="../../TemplateInstances/src/TemplateInstances.js"></script>
+<script src="../../TemplateBinding/load.js"></script>
 <script src="../third_party/esprima/esprima.js"></script>
 <script src="../src/polymer-expressions.js"></script>
 </head>
