--- a/packages/expressions/tests/index.html
+++ b/packages/expressions/tests/index.html
@@ -21,6 +21,9 @@ limitations under the License.
 <link rel="stylesheet" href="../node_modules/mocha/mocha.css">
 <script src="../node_modules/chai/chai.js"></script>
 <script src="../node_modules/mocha/mocha.js"></script>
+<script>
+var forceCollectObservers = true;
+</script>
 <script src="../../TemplateBinding/load.js"></script>
 <script src="../third_party/esprima/esprima.js"></script>
 <script src="../src/polymer-expressions.js"></script>
@@ -34,7 +37,7 @@ mocha.setup({
 });
 
 var assert = chai.assert;
-
+var forceCollectObservers = true;
 </script>
 <script src="tests.js"></script>
 <div id="mocha"></div>
