--- a/packages/expressions/index.html
+++ b/packages/expressions/index.html
@@ -1,45 +1,64 @@
-<!DOCTYPE html>
-<!--
-Copyright 2013 Google Inc.
-
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
--->
+<!doctype html>
 <html>
 <head>
-<title>PolymerExpressions tests</title>
-<meta charset="utf-8">
-<link rel="stylesheet" href="../node_modules/mocha/mocha.css">
-<script src="../node_modules/chai/chai.js"></script>
-<script src="../node_modules/mocha/mocha.js"></script>
-<script src="../../ObserveJS/src/observe.js"></script>
-<script src="../src/node-bind.js"></script>
-<script src="../../mdv/src/template_element.js"></script>
+  <title>polymer api</title>
+  <style>
+    html, body {
+      font-family: Arial, sans-serif;
+      white-space: nowrap;
+      overflow: hidden;
+    }
+    [noviewer] [ifnoviewer] {
+      display: block;
+    }
+    [detector], [ifnoviewer], [noviewer] [ifviewer] {
+      display: none;
+    }
+    [ifviewer], [ifnoviewer] {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+    }
+    iframe {
+      border: none;
+      margin: 0;
+      width: 100%;
+      height: 100%;
+    }
+    #remote {
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
+  </style>
+  <script src="../platform/platform.js"></script>
+  <link rel="import" href="../polymer-home-page/polymer-home-page.html">
 </head>
 <body>
-<script>
-
-mocha.setup({
-  ui: 'tdd',
-  ignoreLeaks: true
-});
-
-var assert = chai.assert;
-
-</script>
-<script src="polymer-expressions-tests.js"></script>
-<div id="mocha"></div>
-<script>
-mocha.run();
-</script>
+  <img detector src="../polymer-home-page/bowager-logo.png" onerror="noviewer()">
+  <polymer-home-page ifviewer></polymer-home-page>
+  <div ifnoviewer>
+    <span id="remote">[remote]</span>
+    <iframe></iframe>
+  </div>
+  <!-- -->
+  <script>
+    var remoteDocs = 'http://turbogadgetry.com/bowertopia/components/';
+    // if no local info viewer, load it remotely
+    function noviewer() {
+      document.body.setAttribute('noviewer', '');
+      var path = location.pathname.split('/');
+      var module = path.pop() || path.pop();
+      document.querySelector('iframe').src = remoteDocs + module;
+      document.querySelector('title').textContent = module;
+    }
+    // for testing only
+    var opts = window.location.search;
+    if (opts.indexOf('noviewer') >= 0) {
+      noviewer();
+    }
+  </script>
 </body>
 </html>
