Correctly track expression dependencies
Some types of expressions have observation dependencies that are dynamic. For example: "a[b].c".

This patch correctly detects these cases and resets observation when a change occurs.

R=arv
BUG=

Review URL: https://codereview.appspot.com/49330044

--- a/packages/expressions/tests/index.html
+++ b/packages/expressions/tests/index.html
@@ -22,7 +22,7 @@ limitations under the License.
 <script src="../node_modules/chai/chai.js"></script>
 <script src="../node_modules/mocha/mocha.js"></script>
 <script>
-var forceCollectObservers = true;
+var exposeGetExpression = true;
 </script>
 <script src="../../TemplateBinding/load.js"></script>
 <script src="../third_party/esprima/esprima.js"></script>
@@ -37,7 +37,6 @@ mocha.setup({
 });
 
 var assert = chai.assert;
-var forceCollectObservers = true;
 </script>
 <script src="tests.js"></script>
 <div id="mocha"></div>
