--- a/packages/expressions/index.html
+++ b/packages/expressions/index.html
@@ -41,7 +41,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       right: 0;
     }
   </style>
-  <script src="../platform/platform.js"></script>
+  <script src="../webcomponentsjs/webcomponents.js"></script>
   <link rel="import" href="../polymer-home-page/polymer-home-page.html">
 </head>
 <body>
