--- a/packages/expressions/polymer-expressions.html
+++ b/packages/expressions/polymer-expressions.html
@@ -5,4 +5,9 @@ The complete set of contributors may be found at http://polymer.github.io/CONTRI
 Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt -->
 
-<script src="src/polymer-expressions.js"></script>
+<link rel="import" href="../imd/imd.html">
+
+<script src="build/src/tokenizer.js" as="polymer-expressions/tokenizer"></script>
+<script src="build/src/parser.js" as="polymer-expressions/parser"></script>
+<script src="build/src/eval.js" as="polymer-expressions/eval"></script>
+<!-- <script src="polymer-expressions.js"></script> -->
