--- a/packages/expressions/demo/demo-element.html
+++ b/packages/expressions/demo/demo-element.html
@@ -4,40 +4,73 @@
 <link rel="import" href="../polymer-expressions.html">
 
 <dom-module id="demo-element">
+
   <style>
     :host {
       display: block;
       box-sizing: border-box;
     }
   </style>
+
   <template>
     <h1>polymer-expressions Demo</h1>
-    <div>foo:<input type="number" value-as-number="{{foo::change}}"></input></div>
-    <div>bar:<input value="{{bar::change}}"></input></div>
-    <div>foo + 1 : <span>{{foo + 1}}</span></div>
-    <div>bar.length : <span>{{bar.length}}</span></div>
-    <div>1 : <span>{{1}}</span></div>
+    <div>
+      <h3>Here you can set some properties:</h3>
+      <div><code>foo</code>: <input type="number" value-as-number="{{foo::change}}"></input></div>
+      <div><code>bar</code>: <input value="{{bar::change}}"></input></div>
+    </div>
+    <div>
+      <h3>And here we have some complex expressions based on them:</h3>
+      <div><code>foo + 1</code>: <span>{{foo + 1}}</span></div>
+      <div><code>bar.length</code>: <span>{{bar.length}}</span></div>
+      <div><code>1</code>: <span>{{1}}</span></div>
+    </div>
+    <div>
+      <h3>dom-if</h3>
+      <div>Here's a dom-if that renders when <code>foo == 42</code></div>
+      <template is="dom-if" if="{{foo == 42}}">
+        <div>What is <code>6 * 7</code>?</div>
+        <h4>Complex expressions work inside <code>dom-if</code></h4>
+        <div><code>foo * 2: </code>{{ foo * 2 }}</div>
+      </template>
+    </div>
+    <div>
+      <h3>dom-repeat</h3>
+      <div>
+        Complex expressions work in the <code>items</code> attribute, but not
+        in expressions inside the <code>dom-repeat</code>.
+      </div>
+      <template is="dom-repeat" items="{{ ['a', 'b', 'c'] }}">
+        <span>{{ index }}</span>:<span>{{ item }}</span>
+      </template>
+    </div>
+    <div>
+      <h3>Transformers</h3>
+      <div><code>bar | uppercase</code>: <span>{{bar | uppercase}}<span></div>
+    </div>
   </template>
-</dom-module>
 
-<script type="text/javascript">
+  <script>
 
-  function mixin(o, m) {
-    for (var p in m) {
-      o[p] = m[p];
-    }
-    return o;
-  }
+    Polymer({
+      is: 'demo-element',
 
-  Polymer(mixin({
-    is: 'demo-element',
+      behaviors: [PolymerExpressions],
 
-    properties: {
-      foo: {
-        type: Number,
-        value: 41,
+      properties: {
+        foo: {
+          type: Number,
+          value: 41,
+        },
+
+        uppercase: {
+          type: Function,
+          value: () => (s) => s == null ? null : s.toUpperCase(),
+        }
       },
-    },
 
-  }, PolymerExpressions));
-</script>
+    });
+
+  </script>
+
+</dom-module>
