--- a/packages/expressions/demo/index.html
+++ b/packages/expressions/demo/index.html
@@ -2,6 +2,7 @@
 
 <html>
   <head>
+    <link rel="import" href="../../imd/imd.html">
     <link rel="import" href="../../polymer/polymer.html">
     <link rel="import" href="demo-element.html">
   </head>
