[element] Rename Stampino Element to Heximal Element

--- a/packages/element/demo/simple-greeting.html
+++ b/packages/element/demo/simple-greeting.html
@@ -1,6 +1,6 @@
-<script type="module" src="/stampino-element.js"></script>
+<script type="module" src="/index.js"></script>
 
-<stampino-element name="simple-greeter" properties="name">
+<h-define-element name="simple-greeter" properties="name">
   <style type="adopted-css">
     :host {
       color: blue;
@@ -9,4 +9,4 @@
   <template>
     <h1>Hello {{ name }}!</h1>
   </template>
-</stampino-element>
+</h-define-element>
