--- a/packages/element/demo/index.html
+++ b/packages/element/demo/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <script type="module" src="/stampino-element.js"></script>
+    <script type="module" src="/index.js"></script>
     <style>
       body {
         max-width: 800px;
@@ -21,7 +21,7 @@
       <h3>Foo is {{ foo ?? 'undefined' }}</h3>
     </template>
 
-    <stampino-element name="simple-greeter" properties="name">
+    <h-define-element name="simple-greeter" properties="name">
       <style type="adopted-css">
         :host {
           color: blue;
@@ -31,7 +31,7 @@
         <h1>Hello {{ name }}!</h1>
         <template call="sub-template" data="{{ {'foo': 'FOO'} }}"></template>
       </template>
-    </stampino-element>
+    </h-define-element>
     
     <simple-greeter name="World"></simple-greeter>
   </body>
