[components] Add h-var and h-out elements

--- a/packages/examples/documents/index.html
+++ b/packages/examples/documents/index.html
@@ -7,6 +7,7 @@
     <h1>Example Heximal Documents</h1>
     <ul>
       <li><a href="./components/simple/index.html">Simple Component</a></li>
+      <li><a href="./variables/index.html">Variables</a></li>
       <li><a href="./include/index.html">&lt;h-include></a></li>
     </ul>
   </body>
