[components] Better scopes
- Make utilities for building element scopes
- h-var adds itself to its scope, removes on diconnect
- Rename h-out.value to .expr
- Move output.ts to out.ts

--- a/packages/examples/documents/variables/index.html
+++ b/packages/examples/documents/variables/index.html
@@ -14,7 +14,7 @@
     <pre><script type="sample" style="display: block">
       <h-var name="name" value="World"></h-var>
 
-      <p>h-out: <h-out value="name"></h-out></p>
+      <p>h-out: <h-out expr="name"></h-out></p>
 
       <template h-auto>
         <p>Binding: {{ name }}</p>
@@ -27,7 +27,7 @@
 
     <h-var name="name" value="World"></h-var>
 
-    <p>h-out: <h-out value="name"></h-out></p>
+    <p>h-out: <h-out expr="name"></h-out></p>
 
     <template h-auto>
       <p>Binding: {{ name }}</p>
