[components] Add <h-scope> element

--- a/packages/examples/documents/variables/index.html
+++ b/packages/examples/documents/variables/index.html
@@ -39,5 +39,13 @@
         />
       </p>
     </template>
+
+    <h-scope>
+      <p>A &lt;h-scope> element defines a new nested scope</p>
+
+      <h-var name="name" value="Scope"></h-var>
+
+      <p>h-out: <h-out expr="name"></h-out></p>
+    </h-scope>
   </body>
 </html>
