[components] Make vars in templates work

--- a/packages/examples/documents/index.html
+++ b/packages/examples/documents/index.html
@@ -6,9 +6,11 @@
   <body>
     <h1>Example Heximal Documents</h1>
     <ul>
-      <li><a href="./components/simple/index.html">Simple Component</a></li>
+      <li><a href="./templates/index.html">Templates</a></li>
       <li><a href="./variables/index.html">Variables</a></li>
+      <li><a href="./components/simple/index.html">Simple Component</a></li>
       <li><a href="./include/index.html">&lt;h-include></a></li>
+      <li><a href="./fetch/index.html">&lt;h-fetch></a></li>
     </ul>
   </body>
 </html>
