--- a/packages/examples/documents/index.html
+++ b/packages/examples/documents/index.html
@@ -11,6 +11,7 @@
       <li><a href="./components/simple/index.html">Simple Component</a></li>
       <li><a href="./include/index.html">&lt;h-include></a></li>
       <li><a href="./fetch/index.html">&lt;h-fetch></a></li>
+      <li><a href="./num/index.html">&lt;h-num></a></li>
     </ul>
   </body>
 </html>
