[components] Set number style when currency or unit attribute is present.

--- a/packages/examples/documents/num/index.html
+++ b/packages/examples/documents/num/index.html
@@ -16,10 +16,10 @@
         Currency
         <p>
           <code
-            >&lt;h-num display="currency" currency="USD">1234.5&lt;/h-num></code
+            >&lt;h-num currency="USD">1234.5&lt;/h-num></code
           >
         </p>
-        <p><h-num display="currency" currency="USD">1234.5</h-num></p>
+        <p><h-num currency="USD">1234.5</h-num></p>
       </li>
       <li>
         With variables
